Fix css for nodes and buttons in dark mode

--- a/res/node.css
+++ b/res/node.css
@@ -2,11 +2,12 @@
     position: absolute;
     width: 100px;
     height: 100px;
-    background-color: rgb(27, 27, 27);
-    border: 2px solid rgb(51, 51, 51);
+    background-color: rgb(30, 30, 30);
+    border: 1px solid rgb(139, 139, 139);
     box-shadow: rgba(0, 0, 0, 0.65) 2px 3px 4px, rgba(0, 0, 0, 0.23) 2px 2px 4px;
     border-radius: 10%;
     cursor: move;
+    z-index: 1;
     behavior: url(./PIE.htc);
 }
 
